Product not showing error fixed

--- a/src/styles/components/_Productbox.scss
+++ b/src/styles/components/_Productbox.scss
@@ -5,7 +5,6 @@
   border: solid 1px rgb(218, 218, 218);
   margin: auto 13px;
   // margin-top: ;
-  display: none;
   overflow: hidden;
   box-sizing: border-box;
   padding: 0px;
